--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
   padding-top: 15px;
 }
 
-.btn {
+.tag {
   padding: .2rem .375rem;
   font-size: 0.7rem;
 }
@@ -15,4 +15,38 @@
 .no-movie {
   margin: 10rem auto;
   font-size: 3rem;
+}
+
+.img {
+  opacity: 1;
+  display: block;
+  width: 100%;
+  height: auto;
+  transition: .5s ease;
+  backface-visibility: hidden;
+}
+
+.middle {
+  transition: .5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.card:hover .img {
+  opacity: 0.3;
+}
+
+.card:hover .middle {
+  opacity: 1;
+}
+
+@media (min-width: 576px) {
+  .modal-box {
+    max-width: 700px!important;
+  }
 }
